Fix dashboard overflow

--- a/microservices/app/imports/client/layouts/AppLayout/AppLayout.scss
+++ b/microservices/app/imports/client/layouts/AppLayout/AppLayout.scss
@@ -6,7 +6,7 @@
 .app-root {
   width: 100%;
   height: 100%;
-  min-width: 1000px;
+  min-width: 1200px;
 }
 
 .app-layout {
